# amazon-redshift-utils

./: pyproject.toml
src/: redshift_utils_helper.py  requirements.txt
src/AdminViews/: run_deploy_admin_views.py  v_my_last_copy_errors.sql  v_my_last_query_summary.sql
src/ColumnEncodingUtility/: README.md
src/Monitoring/: README.md  metric_model.py  queries_provisioned.yaml  queries_serverless.yaml  query_config_model.py  query_service.py  redshift_connection.py  run_monitoring.py
