[tool.poetry]
name = "amazon-redshift-utils"
version = "0.1.0"
description = ""
authors = ["Manuel Pozo <manuel.pozo@sorare.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.80"
python-json-logger = "^2.0.4"
shortuuid = "^1.0.9"
six = "^1.16.0"
pg8000 = "^1.29.1"
pgpasslib = "^1.1.0"
redshift-connector = "^2.0.909"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
lint = "^1.2.1"
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


